manifests/prd/cloudflare-tunnel-gateway/GatewayClass-cloudflare-tunnel.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  labels:
    app.kubernetes.io/instance: cloudflare-tunnel-gateway-controller
    app.kubernetes.io/name: cloudflare-tunnel-gateway-controller
  name: cloudflare-tunnel
spec:
  controllerName: cf.k8s.lex.la/tunnel-controller
  parametersRef:
    group: cf.k8s.lex.la
    kind: GatewayClassConfig
    name: cloudflare-tunnel-gateway-controller
