manifests/prd/cloudflare-tunnel-gateway/Service-cloudflare-tunnel-gateway-controller-proxy-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: cloudflare-tunnel-gateway-controller
    app.kubernetes.io/name: cloudflare-tunnel-gateway-controller-proxy
  name: cloudflare-tunnel-gateway-controller-proxy-headless
  namespace: cloudflare-tunnel-system
spec:
  clusterIP: None
  ports:
    - name: config-api
      port: 8081
      protocol: TCP
      targetPort: config-api
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: cloudflare-tunnel-gateway-controller
    app.kubernetes.io/name: cloudflare-tunnel-gateway-controller-proxy
  type: ClusterIP
