manifests/prd/cloudflare-tunnel-gateway/Service-cloudflare-tunnel-gateway-controller-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: cloudflare-tunnel-gateway-controller
    app.kubernetes.io/name: cloudflare-tunnel-gateway-controller-proxy
    cf.k8s.lex.la/metrics: "true"
  name: cloudflare-tunnel-gateway-controller-proxy
  namespace: cloudflare-tunnel-system
spec:
  ports:
    - name: config-api
      port: 8081
      protocol: TCP
      targetPort: config-api
    - name: proxy
      port: 8080
      protocol: TCP
      targetPort: proxy
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/instance: cloudflare-tunnel-gateway-controller
    app.kubernetes.io/name: cloudflare-tunnel-gateway-controller-proxy
  type: ClusterIP
