manifests/prd/cloudflare-tunnel-gateway/Service-cloudflare-tunnel-gateway-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cloudflare-tunnel-gateway-controller
    app.kubernetes.io/name: cloudflare-tunnel-gateway-controller
  name: cloudflare-tunnel-gateway-controller
  namespace: cloudflare-tunnel-system
spec:
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: metrics
    - name: health
      port: 8081
      protocol: TCP
      targetPort: health
  selector:
    app.kubernetes.io/instance: cloudflare-tunnel-gateway-controller
    app.kubernetes.io/name: cloudflare-tunnel-gateway-controller
  type: ClusterIP
