manifests/prd/cloudflare-tunnel-gateway/CiliumNetworkPolicy-cloudflare-tunnel-gateway-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-tunnel-gateway-controller
  namespace: cloudflare-tunnel-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-tunnel-gateway-controller-proxy
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflare-tunnel-gateway-controller
